Fix buttons being stuck together

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -34,6 +34,14 @@ a.p-button {
   gap: 1rem;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15rem, calc(33% - 1rem)));
+  row-gap: 1rem;
+  column-gap: 1rem;
+  justify-content: center;
+}
+
 pre {
   overflow-wrap: break-word;
   overflow: hidden;
